@@ -17,6 +17,9 @@ Post-v3.0.0
      * Conntrack IPv6 fragment support.
    - DPDK:
      * Add support for DPDK 22.11.1.
+     * New experimental "cp-protection=<protocol>" option to redirect certain
+       protocols (for now, only LACP) to a dedicated hardware queue using
+       RTE flow.
    - For the QoS max-rate and STP/RSTP path-cost configuration OVS now assumes
      10 Gbps link speed by default in case the actual link speed cannot be
      determined.  Previously it was 10 Mbps.  Values can still be overridden
